[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-execution-engine"
version = "0.1.0"
description = "Durable job runner for agent/tool tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128,<1.0",
    "redis>=5.0,<6.0",
    "uvicorn>=0.39,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
